# alchemical-mlip

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  THIRD-PARTY-LICENSES  pyproject.toml  requirements.txt
alchemical_mace/: calculator.py  model.py  optimize.py  utils.py
data/structures/: AlN_hex.cif  BiSBr.cif  CeO2.cif  CsPbI3_alpha.cif  CsPbI3_delta.cif  CsSnI3_alpha.cif  CsSnI3_delta.cif  Fe.cif  GaN_hex.cif  NaCl.cif
notebooks/: 1_solid_solution.ipynb  2_compositional_optimization.ipynb  3_vacancy_analysis.ipynb  4_perovskite_analysis.ipynb
scripts/: perovskite_alchemy.py  perovskite_frenkel_ladd.py  vacancy_frenkel_ladd.py
