[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemical_mace"
authors = [
    { name = "Juno Nam", email = "junonam@mit.edu" },
]
description = "Alchemical MACE model"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[tool.setuptools]
packages = ["alchemical_mace"]
